--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,11 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true
-  }
+  },
+
+    "scripts": {
+      "ts:check": "tsc"
+    }
+  
+
 }
